# pdf-metadata-editor

./: .gitignore  README.md  metadata.json  pdf_metadata_editor.py  pyproject.toml
